# tess-gpt

./: Cargo.toml  README.md
examples/: shakespear.rs  shakespear_tutorial.rs
tess-math/: Cargo.toml
tess-math/examples/: bigram_language_model.rs  tensor.rs
tess-math/src/: lib.rs  tensor.rs  tensor_old.rs
tess-math/src/language_models/: bigram_model.rs  mod.rs  token_embedding_table.rs
tess-math/src/math/: mod.rs  tensor.rs
tess-math/src/math/tensor/: mod.rs  tensor.rs  tensor_arithmetic.rs  tensor_getter.rs  tensor_index.rs  tensor_iter.rs  tensor_setter.rs
tess-math/src/ml/: mod.rs
tess-math/src/ml/language_models/: mod.rs
tess-system/: Cargo.toml
tess-system/examples/: benchmark.rs  tokenizer.rs
tess-system/src/: tokenizer.rs
